# LiteOCR

./: .gitignore  README.md  README_zh.md  build.bat  pyproject.toml  requirements-all.txt  text.txt
.github/workflows/: build.yml
resources/: resources.qrc
resources/translations/: liteocr_zh_CN.qm  liteocr_zh_CN.ts
src/: config_manager.py  main.py  ocr_processor.py
src/gui/: config_window.py  icon_manager.py  screenshot.py  tray_icon_manager.py
src/liteocr/: config_manager.py  hotkey_manager.py  logger_config.py  main.py  ocr_processor.py
src/liteocr/gui/: config_window.py  hotkey_recorder.py  icon_manager.py  screenshot.py  tray_icon_manager.py  widgets.py
src/liteocr/gui/common/: menu_builder.py  style_manager.py
src/liteocr/gui/sections/: language_section.py  provider_section.py  shortcut_section.py
translations/: liteocr_zh_CN.ts
