[project]
name = "liteocr"
version = "0.1.0"
description = "A lightweight OCR tool that converts screenshots to Markdown using AI models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.79.0",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "nuitka>=2.7.3",
]

[project.scripts]
liteocr = "liteocr.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
